workflow manual action add.

--- a/.github/workflows/cnn-rag.yaml
+++ b/.github/workflows/cnn-rag.yaml
@@ -3,6 +3,10 @@ run-name: Question-Answer - ${{ github.actor }} - ${{ github.event_name }} - ${{
 on: 
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
+  push:
+    paths:
+      - 'cnn-rag/**'
 
 env:
   PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
