--- a/.github/workflows/cnn-rag.yaml
+++ b/.github/workflows/cnn-rag.yaml
@@ -35,8 +35,8 @@ jobs:
           poetry run python data_pipeline.py upsert
       - name: Commit and push changes
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config --global user.name 'cfossguy'
+          git config --global user.email 'williamsj@pinecone.io'
           git add -A
           git commit -m "Committing updated JSONL files"
           git push
