--- a/.github/workflows/cnn-rag.yaml
+++ b/.github/workflows/cnn-rag.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Commit and push changes
         run: |
           git config --global user.name 'cfossguy'
-          git config --global user.email 'williamsj@pinecone.io'
+          git config --global user.email 'cfossguy@gmail.com'
           git add -A
           git commit -m "Committing updated JSONL files"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/pinecone-field/rag-and-imagesearch.git
