--- a/image-search-at-scale/search-app/package.json
+++ b/image-search-at-scale/search-app/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
