--- a/image-search-at-scale/pyproject.toml
+++ b/image-search-at-scale/pyproject.toml
@@ -17,5 +17,6 @@ pillow = "^10.3.0"
 torch = "^2.3.0"
 python-dotenv = "^1.0.1"
 pinecone-client = "^4.0.0"
+requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
