--- a/image-search-at-scale/pyproject.toml
+++ b/image-search-at-scale/pyproject.toml
@@ -19,3 +19,6 @@ python-dotenv = "^1.0.1"
 pinecone-client = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.2.5"
+
