--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: flake8 Lint
+name: Pylint Lint
 
 on: [push, pull_request]
 
@@ -21,6 +21,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd image-search-at-scale
         poetry install
 
     - name: Run pylint
