--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,4 +27,5 @@ jobs:
     - name: Run pylint
       run: |
         cd image-search-at-scale
-        poetry shell run pylint main.py
+        poetry shell 
+        run pylint main.py
