--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,24 +7,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'  # Specify the version of Python you are using
-
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-
-    - name: Install dependencies
-      run: |
-        cd image-search-at-scale
-        poetry install --only dev
-
-    - name: Run pylint
-      run: |
-        cd image-search-at-scale
-        poetry run pylint main.py
+      - name: Checkout repository
+        uses: actions/checkout@v2
+  
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Specify the Python version you need
+  
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+  
+      - name: Run PyLint
+        run: |
+          pylint image-search-at-scale/main,py
