--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
   
       - name: Run PyLint
         run: |
-          pylint image-search-at-scale/main,py
+          pylint image-search-at-scale/main.py
